--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,7 +67,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
-
+    //circle image view
+    implementation "de.hdodenhof:circleimageview:3.1.0"
     // LiveData
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
 
@@ -81,9 +82,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
     // Koin
-    implementation "org.koin:koin-androidx-viewmodel:2.2.1"
-    implementation "org.koin:koin-androidx-fragment:2.2.1"
-    implementation "org.koin:koin-androidx-ext:2.2.1"
+    implementation "io.insert-koin:koin-core:3.0.1"
+    implementation "io.insert-koin:koin-android:3.0.1"
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.2"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.2"
